UI - Unwrap Wrapping token from Login page. Resolves: #5893.

--- a/ui/app/styles/components/codemirror.scss
+++ b/ui/app/styles/components/codemirror.scss
@@ -56,6 +56,7 @@ $gutter-grey: #2a2f36;
     font-family: $family-monospace;
     -webkit-font-smoothing: auto;
     line-height: 1.4;
+    height: auto;
   }
 
   .CodeMirror-gutters {
@@ -198,3 +199,4 @@ $gutter-grey: #2a2f36;
 .cm-s-auto-height.CodeMirror {
   height: auto;
 }
+
